# learnopengl

./: .gitignore  CMakeLists.txt
include/: 3d.h  shader.h
include/glad/: glad.h
src/: 3d.cpp  glad.c  main.cpp  shader.cpp
src/shaders/: fshader.fs  lightSource_fshader.fs  lightSource_vshader.vs  vshader.vs
